# home-telemetry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  adapters.py  build.sh  compose.yaml  data_analysis.py  database.py  main.py  models.py  pyproject.toml  request_retry.py
.github/workflows/: lint-and-test.yml
data_analysis/: __main__.py  heatpump.py  plotting.py  solar_vs_p1.py  voltage.py
home_telemetry/: __main__.py  adapters.py  config.py  data_analysis.py  database.py  main.py  models.py  request_retry.py
infra/: app-deployment.yaml  config-example.yaml  db-deployment.yaml  db-pv.yaml  db-pvc.yaml  db-service.yaml
tests/: conftest.py  test_adapters.py  test_aggregation.py  test_database.py  test_main.py
