[tool.poetry]
name = "home-telemetry"
version = "0.1.0"
description = "Personal app for monitoring the heatpump and general energy consumption and production at home"
authors = ["Nick Doornekamp <nddoornekamp@gmail.com>"]
readme = "README.md"
packages = [{ include = "home_telemetry" }]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.12"
requests = "^2.30.0"
structlog = "^23.1.0"
rich = "^13.5.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
ruff = "^0.0.265"
mypy = "^1.2.0"
types-requests = "^2.30.0.0"
matplotlib = "^3.7.1"
tqdm = "^4.66.1"
pyqt5 = "5.15.2"
pre-commit = "^3.6.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
